<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical"
    android:padding="15dp">

    <ImageView
        android:id="@+id/ocrImageView"
        android:layout_width="250dp"
        android:layout_height="202dp"
        android:layout_centerHorizontal="true" />


    <LinearLayout
        android:id="@+id/actionContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ocrImageView"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/selectImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/select_image"
            android:textColor="@color/login_form_details"
            tools:ignore="RtlHardcoded" />

        <Button

            android:id="@+id/processImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/recognize_text"
            android:textColor="@color/login_form_details"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/goToTranslate"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:text="@string/translate"
            android:textColor="@color/login_form_details" />
    </LinearLayout>

    <EditText
        android:id="@+id/ocrResult"
        android:layout_width="384dp"
        android:layout_height="194dp"
        android:layout_below="@+id/actionContainer"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:gravity="top"
        android:hint="@string/detected_text_will_appear_here"
        android:inputType="textMultiLine"
        android:padding="10dp"
        android:textColor="@color/login_form_details"
        android:textColorHint="@color/login_form_details" />


    <Button
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ocrResult"
        android:layout_gravity="center_horizontal"

        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="10dp"
        android:layout_toStartOf="@+id/gotorecords"
        android:layout_toLeftOf="@+id/gotorecords"
        android:layout_toEndOf="@+id/gotograph"
        android:layout_toRightOf="@+id/gotograph"
        android:background="@drawable/button_background"
        android:text="@string/logout"
        android:textColor="@color/colorAccent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/gotograph"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ocrResult"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="21dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="View Graph"
        android:textColor="@color/login_form_details"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/gotorecords"
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ocrResult"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="14dp"
        android:layout_weight="1"
        android:background="@drawable/button_background"
        android:text="View Records"
        android:textColor="@color/login_form_details"
        tools:ignore="RtlHardcoded" />
</RelativeLayout>